# fastapi-jwt

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
src/: auth.py  main.py  schema.py
